--- a/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
+++ b/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="TileIso.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="TileIso.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
